// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`body.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
with (a);
if (1); else if (2); else;
for (;;);
while (1);
for (var i in o);
for (var i of o);
do; while(1);

=====================================output=====================================
with (a);
if (1);
else if (2);
else;
for (;;);
while (1);
for (var i in o);
for (var i of o);
do;
while (1);

================================================================================
`;

exports[`no-newline.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
if (a) {
  b;


  ;
}

=====================================output=====================================
if (a) {
  b;
}

================================================================================
`;
